--- a/detail/Ascension.html
+++ b/detail/Ascension.html
@@ -9,6 +9,19 @@
     <title> Церква Воздвиження </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
 
     <script src="../js/preloader.js"></script>
@@ -34,31 +47,13 @@
 
             <h2>Історія</h2>
 
-            <p><img id="H" id="ImgRight" src="img/Ascension2.jpeg" align="right" vspace="5" hspace="5">
-                Зведена у Києві на місці однойменної дерев'яної церкви, побудованої в 1748 році коштом мешканців
-                прилеглої місцевості Кожум'яки, чий ремісничий цех належав до Київського братства. Церква знаходиться
-                під Замковою горою, з північно-західного боку.
-
-                Під час руйнівної пожежі 1811 року згорів майже весь Поділ, не збереглась й ця церква. Після пожежі
-                розпочалося будівництво нової кам'яної церкви.
-
-                У 1841 році оновлену кам'яну церкву було освячено, а в 1886—1887 роках було здійснено значне розширення
-                церкви. У 1901—1905 роках до церкви прибудували двоповерхову кам'яну прибудову з північного боку,
-                симетричну південній прибудові.
-
-                1872 року в церкві отримав хрещення Григорій Світлицький, а у 1891 році — Михайло Булгаков.
-
-                У 1914 році здійснені добудови в церкві, до початку ХХ століття належать і розписи, виконані Григорієм
-                Світлицьким.
-
-                Церква була чинною й після Жовтневого перевороту, але у 1935 року храм все ж закрили. У період з 1936 по
-                1941 роки церковні приміщення використовувались під різні майстерні та склади. Інтер'єру церкви було
-                завдано величезної шкоди. У роки німецької окупації відправи поновились і відтоді більше не припинялись.
-
-                У 1984 року була реконструйована. Нині церква належить УПЦ МП.
-
-                Сповідні розписи, метричні книги і клірові відомості церкви (з 1786 по 1920 рік) зберігаються в
-                Центральному державному історичному архіві України (ЦДІАК України).
+            <p><img id="H" id="ImgRight" src="img/Ascension2.jpeg" align="right" vspace="5" hspace="5"> Зведена у Києві на місці однойменної дерев'яної церкви, побудованої в 1748 році коштом мешканців прилеглої місцевості Кожум'яки, чий ремісничий цех належав
+                до Київського братства. Церква знаходиться під Замковою горою, з північно-західного боку. Під час руйнівної пожежі 1811 року згорів майже весь Поділ, не збереглась й ця церква. Після пожежі розпочалося будівництво нової кам'яної церкви.
+                У 1841 році оновлену кам'яну церкву було освячено, а в 1886—1887 роках було здійснено значне розширення церкви. У 1901—1905 роках до церкви прибудували двоповерхову кам'яну прибудову з північного боку, симетричну південній прибудові. 1872
+                року в церкві отримав хрещення Григорій Світлицький, а у 1891 році — Михайло Булгаков. У 1914 році здійснені добудови в церкві, до початку ХХ століття належать і розписи, виконані Григорієм Світлицьким. Церква була чинною й після Жовтневого
+                перевороту, але у 1935 року храм все ж закрили. У період з 1936 по 1941 роки церковні приміщення використовувались під різні майстерні та склади. Інтер'єру церкви було завдано величезної шкоди. У роки німецької окупації відправи поновились
+                і відтоді більше не припинялись. У 1984 року була реконструйована. Нині церква належить УПЦ МП. Сповідні розписи, метричні книги і клірові відомості церкви (з 1786 по 1920 рік) зберігаються в Центральному державному історичному архіві
+                України (ЦДІАК України).
             </p>
 
         </main>
