--- a/detail/Museum_water.html
+++ b/detail/Museum_water.html
@@ -8,6 +8,19 @@
     <title>Музей води</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -31,25 +44,11 @@
 
             <h2>Історія</h2>
 
-            <p>Водно-інформаційний центр створено Київською міською державною адміністрацією за підтримки Міністерства
-                довкілля Данії до Дня Києва 24 травня 2003 року, під час проведення в Києві 5-ї Європейської
-                конференції міністрів охорони навколишнього середовища «Довкілля для Європи».
-
-                Центр розміщено у відновлених спорудах першого київського централізованого водогону: водонапірних
-                баштах, побудованих в 1872 та 1876 роках (архітектор Олександр Шіле), та підземному резервуарі чистої
-                води.
-
-                Башта, в якій знаходиться вхід до закладу, збудована у 1875—1876 роках і реконструйована 2003 року за
-                первісними кресленнями із відновленням пожежної каланчі. Має висоту 29 метрів.
-
-                Сусідня башта, збудована у 1871-72 роках та розібрана у 1939-40 роках, була відновлена також за
-                старовинними кресленнями. У цій башті розміщено адміністрацію центру.
-
-                Основна експозиція розміщується у приміщенні колишнього підземного резервуару чистої води, побудованого
-                1909 року. Резервуар було збудовано після переходу міста на артезіанське водопостачання з метою кращого
-                забезпечення містян водою.
-
-                Автором виставкової експозиції є дизайнер з Данії Карстон Моллер.
+            <p>Водно-інформаційний центр створено Київською міською державною адміністрацією за підтримки Міністерства довкілля Данії до Дня Києва 24 травня 2003 року, під час проведення в Києві 5-ї Європейської конференції міністрів охорони навколишнього
+                середовища «Довкілля для Європи». Центр розміщено у відновлених спорудах першого київського централізованого водогону: водонапірних баштах, побудованих в 1872 та 1876 роках (архітектор Олександр Шіле), та підземному резервуарі чистої води.
+                Башта, в якій знаходиться вхід до закладу, збудована у 1875—1876 роках і реконструйована 2003 року за первісними кресленнями із відновленням пожежної каланчі. Має висоту 29 метрів. Сусідня башта, збудована у 1871-72 роках та розібрана
+                у 1939-40 роках, була відновлена також за старовинними кресленнями. У цій башті розміщено адміністрацію центру. Основна експозиція розміщується у приміщенні колишнього підземного резервуару чистої води, побудованого 1909 року. Резервуар
+                було збудовано після переходу міста на артезіанське водопостачання з метою кращого забезпечення містян водою. Автором виставкової експозиції є дизайнер з Данії Карстон Моллер.
             </p>
 
 
