--- a/detail/Park_of_Eternal_Glory.html
+++ b/detail/Park_of_Eternal_Glory.html
@@ -8,6 +8,19 @@
     <title>Парк Вічної Слави</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -32,15 +45,9 @@
             <h2>Опис</h2>
 
             <p>
-                <img id="ImgLeft" src="img/Park_of_Eternal_Glory2.jpg" align="left" vspace="5" hspace="5">
-                Заповідний парк-пам'ятка садово-паркового мистецтва місцевого значення (з 1972 року) у місті Києві.
-                Розташований на верхній та середній наддніпровських терасах між Лаврською вулицею та Дніпровським
-                узвозом. З півдня обмежений валами Старої Києво-Печерської фортеці (цитаделі), нижня частина парку межує
-                з історичною місцевістю Аскольдова могила. Головний вхід з площі Слави. До складу парку входять Меморіал
-                Вічної Слави з обеліском на могилі невідомого солдата, Алея Воїнської Слави, Меморіал жертв
-                Голодомору. Площа — 18,37 га.
-
-                На розташованому у парку дитячому майданчику, що неподалік Меморіалу жертв Голодомору, знаходиться
+                <img id="ImgLeft" src="img/Park_of_Eternal_Glory2.jpg" align="left" vspace="5" hspace="5"> Заповідний парк-пам'ятка садово-паркового мистецтва місцевого значення (з 1972 року) у місті Києві. Розташований на верхній та середній наддніпровських
+                терасах між Лаврською вулицею та Дніпровським узвозом. З півдня обмежений валами Старої Києво-Печерської фортеці (цитаделі), нижня частина парку межує з історичною місцевістю Аскольдова могила. Головний вхід з площі Слави. До складу парку
+                входять Меморіал Вічної Слави з обеліском на могилі невідомого солдата, Алея Воїнської Слави, Меморіал жертв Голодомору. Площа — 18,37 га. На розташованому у парку дитячому майданчику, що неподалік Меморіалу жертв Голодомору, знаходиться
                 сонячний годинник.
 
 
