--- a/detail/Square_Kyiv_intellectuals.html
+++ b/detail/Square_Kyiv_intellectuals.html
@@ -8,6 +8,19 @@
     <title>Сквер Київських інтелігентів</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -31,25 +44,11 @@
 
             <h2>Про місце</h2>
 
-            <p>Сквер Київських інтелігентів був створений в 2013, автором проекту став відомий скульптор Костянтин
-                Скритуцький.
-
-                Ця місцевість відрізняється від вже знайомих нам скверів з зеленими насадженнями та лавочками тим,
-                що в
-                ньому знаходяться незвичайні скульптури птахів, які символізують сучасну українську інтелігенцію.
-
-                Згідно із задумом автора, невелика бронзова скульптура птаха-водомороза є образом міського
-                інтелігента.
-                Птах хоче заховати голову під крило, ніби соромлячись усього, що відбувається навкруги. Це натяк на
-                загрозу зникнення інтелігенції як вимираючого виду, а також привід для тих інтелігентів, які ще
-                залишились, замислитись про їхню роль у суспільних справах.
-
-                До слова, птахів тут четверо і кожен презентує свою сферу впливу, що стає зрозумілим із відповідних
-                написів. Ходімо за годинниковою стрілкою, прочитаємо їх усі: малий горобець каже, що “інтелігенція
-                має
-                гордість”, старий ворон стверджує, що “інтелігенція пам’ятає минуле”, водомороз додає, що
-                “інтелігенція
-                зберігає майбутнє”, а мудра сова повчає нас, що “інтелігенція виховує сьогодення”.
+            <p>Сквер Київських інтелігентів був створений в 2013, автором проекту став відомий скульптор Костянтин Скритуцький. Ця місцевість відрізняється від вже знайомих нам скверів з зеленими насадженнями та лавочками тим, що в ньому знаходяться незвичайні
+                скульптури птахів, які символізують сучасну українську інтелігенцію. Згідно із задумом автора, невелика бронзова скульптура птаха-водомороза є образом міського інтелігента. Птах хоче заховати голову під крило, ніби соромлячись усього,
+                що відбувається навкруги. Це натяк на загрозу зникнення інтелігенції як вимираючого виду, а також привід для тих інтелігентів, які ще залишились, замислитись про їхню роль у суспільних справах. До слова, птахів тут четверо і кожен презентує
+                свою сферу впливу, що стає зрозумілим із відповідних написів. Ходімо за годинниковою стрілкою, прочитаємо їх усі: малий горобець каже, що “інтелігенція має гордість”, старий ворон стверджує, що “інтелігенція пам’ятає минуле”, водомороз
+                додає, що “інтелігенція зберігає майбутнє”, а мудра сова повчає нас, що “інтелігенція виховує сьогодення”.
             </p>
 
 
