--- a/detail/Triochsvyatitelska.html
+++ b/detail/Triochsvyatitelska.html
@@ -8,6 +8,19 @@
     <title>Трьохсвятительська церква </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -32,19 +45,9 @@
 
             <h2>Історія</h2>
 
-            <p>Побудована 1183 року. Назва храму відсилає до Свята Трьох Святителів.
-
-                Реставрована близько 1640 року за сприяння Петра Могили. Король Польщі Владислав IV Ваза грамотою від 7
-                червня 1640 року надав Києво-Братському монастирю права на церкву. Під час другої реставрації за
-                митрополита Варлаама (Ясинського) отримала бароковий вигляд.
-
-                1904 року біля церкви було збудовано дзвіницю.
-
-                Закрита згідно з Постановою Президії Київської міської ради від 8 серпня 1934 року під приводом розпаду
-                громади.
-
-                Знищена більшовиками у 1935–1936 для будівництва будівлі Раднаркому УРСР, в якій зараз розташоване
-                Міністерство закордонних справ України.</p>
+            <p>Побудована 1183 року. Назва храму відсилає до Свята Трьох Святителів. Реставрована близько 1640 року за сприяння Петра Могили. Король Польщі Владислав IV Ваза грамотою від 7 червня 1640 року надав Києво-Братському монастирю права на церкву.
+                Під час другої реставрації за митрополита Варлаама (Ясинського) отримала бароковий вигляд. 1904 року біля церкви було збудовано дзвіницю. Закрита згідно з Постановою Президії Київської міської ради від 8 серпня 1934 року під приводом розпаду
+                громади. Знищена більшовиками у 1935–1936 для будівництва будівлі Раднаркому УРСР, в якій зараз розташоване Міністерство закордонних справ України.</p>
 
             <a class="detailA" href="../index.html#rodina_mati"> назад</a>
 
