--- a/detail/Vozdvizhenska.html
+++ b/detail/Vozdvizhenska.html
@@ -9,6 +9,19 @@
     <title> Воздвиженська вулиця </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
 
     <script src="../js/preloader.js"></script>
@@ -35,45 +48,25 @@
             <h2>Історія</h2>
 
             <p>
-                Є однією з найдавніших вулиць Києва і існує ще з часів Київської Руси. Сучасна назва з'явилася у XVIII
-                столітті після спорудження 1748 року дерев'яної Хрестовоздвиженської церкви — парафіяльного храму
-                Гончарів-Кожум'як. Церква згоріла 1811 року і того ж року почалося будівництво нового храму. А впродовж
-                1823–1841 років було споруджено верхній храм.
-
-                Вулиця ж у ті часи відносилася до найнижчого, 4-го розряду і була забудована виключно одно- та
-                півтораповерховими міщанськими будинками, три- і п'ятивіконними. Лише у останній чверті XIX століття на
-                вулиці з'являються будинки на 2-3 поверхи. 1914 року вулицю «підвищили» — перевели до 2-го розряду,
-                однак війни і революції не сприяли покращенню забудови — тут так і не склалося по-справжньому яскравої
-                забудови.
-
-                1936 року набула назву вулиця Ладо Кецховелі на честь революціонера Ладо Кецховелі (назву
-                підтверджено 1944 року). Історичну назву вулиці було відновлено 1984 року.
-
-                Аж до початку 1980-х років тут домінували міщанські, переважно 2-поверхові, обкладені цеглою будинки.
-                Попри те, цей куточок міста зберігав свій колрит і давав змогу відчути себе у Києві кінця XIX століття.
-                Існувала ідея створення у заповідних урочищах «Міста Майстрів», мета якого було збереження за умов
-                реставрації частини існуючої забудови та побудову нових споруд у історичному стилі із влаштуванням в них
-                закладів культури. На жаль, все обмежилося лише знесенням протягом 1984–1989 років більшої частини
-                забудови з поступовим занепадом вулиці.
-
-                Вже на початку XXI століття вулицю було забудовано фактично наново — було створено цікавий проект
-                забудови цих урочищ новими будинками, переважно 3-5 поверховими, у стилі, що імітував би забудову міста
-                100-річної давнини. Проект цей було втілено і вулиця, хоча б і таким чином, відродилася і набула
-                впорядкованого вигляду. Збережена стара забудова реставрується.
+                Є однією з найдавніших вулиць Києва і існує ще з часів Київської Руси. Сучасна назва з'явилася у XVIII столітті після спорудження 1748 року дерев'яної Хрестовоздвиженської церкви — парафіяльного храму Гончарів-Кожум'як. Церква згоріла 1811 року і того
+                ж року почалося будівництво нового храму. А впродовж 1823–1841 років було споруджено верхній храм. Вулиця ж у ті часи відносилася до найнижчого, 4-го розряду і була забудована виключно одно- та півтораповерховими міщанськими будинками,
+                три- і п'ятивіконними. Лише у останній чверті XIX століття на вулиці з'являються будинки на 2-3 поверхи. 1914 року вулицю «підвищили» — перевели до 2-го розряду, однак війни і революції не сприяли покращенню забудови — тут так і не склалося
+                по-справжньому яскравої забудови. 1936 року набула назву вулиця Ладо Кецховелі на честь революціонера Ладо Кецховелі (назву підтверджено 1944 року). Історичну назву вулиці було відновлено 1984 року. Аж до початку 1980-х років тут домінували
+                міщанські, переважно 2-поверхові, обкладені цеглою будинки. Попри те, цей куточок міста зберігав свій колрит і давав змогу відчути себе у Києві кінця XIX століття. Існувала ідея створення у заповідних урочищах «Міста Майстрів», мета якого
+                було збереження за умов реставрації частини існуючої забудови та побудову нових споруд у історичному стилі із влаштуванням в них закладів культури. На жаль, все обмежилося лише знесенням протягом 1984–1989 років більшої частини забудови
+                з поступовим занепадом вулиці. Вже на початку XXI століття вулицю було забудовано фактично наново — було створено цікавий проект забудови цих урочищ новими будинками, переважно 3-5 поверховими, у стилі, що імітував би забудову міста 100-річної
+                давнини. Проект цей було втілено і вулиця, хоча б і таким чином, відродилася і набула впорядкованого вигляду. Збережена стара забудова реставрується.
             </p>
 
             <h2>Історично цінні будівлі, стара забудова</h2>
 
             <p>
                 <li>
-                    <p> № 1 — Хрестовоздвиженська церква (1811; 1823–1841, архітектор Андрій Меленський) з дзвіницею
-                        (1860;
-                        архітектор Павло Спарро) та каплицею Св. Миколая (1914; архітектор А. Петренко), в якій було
-                        охрещено художника Григорія Світлицького та письменника Михайла Булгакова;</p>
+                    <p> № 1 — Хрестовоздвиженська церква (1811; 1823–1841, архітектор Андрій Меленський) з дзвіницею (1860; архітектор Павло Спарро) та каплицею Св. Миколая (1914; архітектор А. Петренко), в якій було охрещено художника Григорія Світлицького
+                        та письменника Михайла Булгакова;</p>
                 </li>
                 <li>
-                    <p> № 10 — житловий будинок, що належав священнику М. Бутовському (1880, реконструйована у 2000-ті;
-                        архітектор Адольф Геккер). Тут 3 травня 1891 року народився Михайло Булгаков;</p>
+                    <p> № 10 — житловий будинок, що належав священнику М. Бутовському (1880, реконструйована у 2000-ті; архітектор Адольф Геккер). Тут 3 травня 1891 року народився Михайло Булгаков;</p>
                 </li>
                 <li>
                     <p> № 43 — житловий будинок (1907; архітектор П. Скульт);</p>
