--- a/detail/ez_v_tymane.html
+++ b/detail/ez_v_tymane.html
@@ -8,6 +8,19 @@
     <title>Пам'ятник Їжачку в тумані</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -30,9 +43,8 @@
             <img src="img/ez_v_tymane.jpg" class="imd">
 
             <p>
-                Пам'ятник Їжачку в тумані з відомого радянського мультфільму знаходиться недалеко від Золотих Воріт в
-                Києві. Це один з найпопулярніших арт-об'єктів Києва. Скульптура була встановлена в 2009 році на перетині
-                вулиць Золотоворітській, Рейтарської і Георгіївського провулка.
+                Пам'ятник Їжачку в тумані з відомого радянського мультфільму знаходиться недалеко від Золотих Воріт в Києві. Це один з найпопулярніших арт-об'єктів Києва. Скульптура була встановлена в 2009 році на перетині вулиць Золотоворітській, Рейтарської і Георгіївського
+                провулка.
             </p>
         </main>
         <a class="detailA" onclick="history.back();"> назад</a>
