--- a/istorichniFoto/detailIFP/Andrew_DescentIFP.html
+++ b/istorichniFoto/detailIFP/Andrew_DescentIFP.html
@@ -11,6 +11,19 @@
     <title> Андріївський Узвіз </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../../js/preloader.js"></script>
 
@@ -57,9 +70,7 @@
 
         <img src="../Img/Andrew_Descent/Andrew_Descent.jpg" alt="">
         <br>
-        <h3>Найстаріші будинки XIX століття на Андріївському узвозі були знищені в 1981 році.Андріївський узвіз
-            почали забудовувати в 1861-1862 роках. Раніше тут була Андріївська церква за проектом архітектора
-            Растреллі. Нижче стояли лише хати-мазанки.</h3>
+        <h3>Найстаріші будинки XIX століття на Андріївському узвозі були знищені в 1981 році.Андріївський узвіз почали забудовувати в 1861-1862 роках. Раніше тут була Андріївська церква за проектом архітектора Растреллі. Нижче стояли лише хати-мазанки.</h3>
         <br>
         <a class="BIF" href="../index.html">Назад</a>
 
