--- a/istorichniFoto/detailIFP/FunicularIFP.html
+++ b/istorichniFoto/detailIFP/FunicularIFP.html
@@ -11,6 +11,19 @@
     <title> Андріївський Узвіз </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../../js/preloader.js"></script>
 
@@ -45,8 +58,8 @@
 
         <img src="../Img/Funikuler/Funikuler20.jpg" alt="">
         <br>
-        <h3>Класичний ракурс на фунікулер зразка початку 20-го століття. Пізніше цей ракурс повністю закрили
-            дерева.</h3>
+        <h3>Класичний ракурс на фунікулер зразка початку 20-го століття. Пізніше цей ракурс повністю закрили дерева.
+        </h3>
         <br><br><br>
 
         <img src="../Img/Funikuler/Funikuler2.jpg" alt="">
@@ -86,9 +99,7 @@
 
         <img src="../Img/Funikuler/Funikuler1943.jpg" alt="">
         <br>
-        <h3>Під час Другої світової війни фунікулер працював з перебоями. Після звільнення міста підйомник
-            пройшов невеликий відновлювальний ремонт і 27 листопада 1943 був знову запущений в експлуатацію. Ось
-            так сумно виглядала верхня станція в 1943 р.</h3>
+        <h3>Під час Другої світової війни фунікулер працював з перебоями. Після звільнення міста підйомник пройшов невеликий відновлювальний ремонт і 27 листопада 1943 був знову запущений в експлуатацію. Ось так сумно виглядала верхня станція в 1943 р.</h3>
         <br><br><br>
 
         <img src="../Img/Funikuler/Funikuler1944.jpg" alt="">
