--- a/istorichniFoto/detailIFP/kreshatikIFP.html
+++ b/istorichniFoto/detailIFP/kreshatikIFP.html
@@ -11,6 +11,19 @@
     <title> Хрещатик </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../../js/preloader.js"></script>
 
@@ -191,8 +204,7 @@
 
             <img src="../Img/kreshatik/kreshatik1940.jpg" alt="">
             <br>
-            <h3>1940 рік. Бронеавтомобілі БА-10 на військовому параді 1 травня. Кут Хрещатика і лютеранської вулиці
-                (тоді вулиця Фрідріха Енгельса)</h3>
+            <h3>1940 рік. Бронеавтомобілі БА-10 на військовому параді 1 травня. Кут Хрещатика і лютеранської вулиці (тоді вулиця Фрідріха Енгельса)</h3>
             <br><br><br>
 
             <img src="../Img/kreshatik/kreshatik1941.jpg" alt="">
@@ -212,8 +224,7 @@
 
             <img src="../Img/kreshatik/kreshatik1944.jpg" alt="">
             <br>
-            <h3>Це 1944 рік. Колона німецьких військовополонених марширує по Хрещатику. Фото зроблене з парапету ЦУМ,
-                місяць серпень.</h3>
+            <h3>Це 1944 рік. Колона німецьких військовополонених марширує по Хрещатику. Фото зроблене з парапету ЦУМ, місяць серпень.</h3>
             <br><br><br>
 
             <img src="../Img/kreshatik/2kreshatik1944.jpg" alt="">
@@ -289,8 +300,7 @@
 
             <img src="../Img/kreshatik/kreshatik1991.jpg" alt="">
             <br>
-            <h3>1991 рік. Історичний момент: перед будівлею міськради на Хрещатику спущено прапор УРСР і піднято замість
-                нього прапор незалежної України</h3>
+            <h3>1991 рік. Історичний момент: перед будівлею міськради на Хрещатику спущено прапор УРСР і піднято замість нього прапор незалежної України</h3>
             <br><br><br>
 
             <img src="../Img/kreshatik/kreshatik2005.jpg" alt="">
