--- a/detail/Landscape_alley.html
+++ b/detail/Landscape_alley.html
@@ -7,6 +7,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -30,28 +43,12 @@
 
             <h2>Розташування та історія створення</h2>
 
-            <p>Фактично це доріжка (автомобільно-пішохідна), яка повторює трасу валу і об'єкти ландшафтного дизайну
-                навколо (бордюри, паркова скульптура, дитячі майданчики, клумби тощо). Бере свій початок від оглядового
-                майданчика біля Національного музею історії України і завершується між будинками № 36 і 40 по вулиці
-                Великій Житомирській. Алея була прокладена на початку 1980-х років за проєктом архітектора Аврама
-                Мілецького.
-
-                Мета споруди алеї — створити можливість огляду туристами видів Подолу та Дніпра з висоти історичного
-                Верхнього міста. Вона проєктувалася як частина комплексу Архітектурно-історичного заповідника
-                «Стародавній Київ», який повинен був охопити території історичних градів, що складали Київ. Також за
-                задумом авторів ідеї, проєктом передбачалося:
-
-                організація Археологічного музею просто неба;
-                створення Музею містобудування XIX століття і народних ремесел;
-                реконструкція однієї із стародавніх вулиць Києва — Андріївського узвозу;
-                будівництво будівель Інституту археології АН УРСР і Музею цього інституту, а також інших будівель;
-                впорядкування київських гір: Старокиївської, Дитинки, Замкової, Уздихальниці і схилів стародавнього
-                Копирева кінця.Зі всього масштабного проєкту, була реалізована тільки «Пейзажна алея».
-
-                В 2019 році «Київавтодор» оголосив тендер на ремонт Пейзажної Алеї. За її реконструкцію готові заплатити
-                4,2 млн грн
-
-                Нині парк мозаїчно-керамічних скульптур на Пейзажній алеї нараховує 75 об'єктів.</p>
+            <p>Фактично це доріжка (автомобільно-пішохідна), яка повторює трасу валу і об'єкти ландшафтного дизайну навколо (бордюри, паркова скульптура, дитячі майданчики, клумби тощо). Бере свій початок від оглядового майданчика біля Національного музею
+                історії України і завершується між будинками № 36 і 40 по вулиці Великій Житомирській. Алея була прокладена на початку 1980-х років за проєктом архітектора Аврама Мілецького. Мета споруди алеї — створити можливість огляду туристами видів
+                Подолу та Дніпра з висоти історичного Верхнього міста. Вона проєктувалася як частина комплексу Архітектурно-історичного заповідника «Стародавній Київ», який повинен був охопити території історичних градів, що складали Київ. Також за задумом
+                авторів ідеї, проєктом передбачалося: організація Археологічного музею просто неба; створення Музею містобудування XIX століття і народних ремесел; реконструкція однієї із стародавніх вулиць Києва — Андріївського узвозу; будівництво будівель
+                Інституту археології АН УРСР і Музею цього інституту, а також інших будівель; впорядкування київських гір: Старокиївської, Дитинки, Замкової, Уздихальниці і схилів стародавнього Копирева кінця.Зі всього масштабного проєкту, була реалізована
+                тільки «Пейзажна алея». В 2019 році «Київавтодор» оголосив тендер на ремонт Пейзажної Алеї. За її реконструкцію готові заплатити 4,2 млн грн Нині парк мозаїчно-керамічних скульптур на Пейзажній алеї нараховує 75 об'єктів.</p>
         </main>
         <a class="detailA" href="../index.html#Landscape_alley"> назад</a>
 
