--- a/detail/Samson.html
+++ b/detail/Samson.html
@@ -9,6 +9,19 @@
     <title> Фонтан Самсон </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
 
     <script src="../js/preloader.js"></script>
@@ -34,34 +47,14 @@
             <h2> Історія </h2>
 
             <p>
-                Вважають, що перший басейн для води тут спорудили ще за часів Київської Руси. Воду для нього подавали по
-                дерев'яних трубах.
-
-                В добу Відродження деякі багаті міста Західної Європи прикрасили свої площі невеликими фонтанами зі
-                скульптурами. Мода на фонтани була підтримана і польськими магнатами, що прикрасили подібними фонтанами
-                сади при власних замках чи їх внутрішні дворики. Серед найдавніших фонтанів України — фонтани
-                Італійського саду замку Підгірці, створені в середині 17 століття (не збереглися).
-                <img id="ImgRight" src="img/Samson2.jpg" align="right" vspace="5" hspace="5">
-
-                З'явився фонтан і на Подолі в Києві. Басейн мав дах у вигляді альтанки, а в середині стояв янгол з
-                чашею, з якої текла вода. Ще один янгол прикрасив дах альтанки на кшталт флюгера.
-
-                Наприкінці XVII ст. на даху альтанки встановили сонячний годинник. Його спорудив викладач
-                Києво-Могилянської академії, француз Брульйон.
-
-                У 1749 тут вперше поставили скульптурку біблійного персонажа Самсона, що роздирав пащу лева.
-
-                У 1811 під час пожежі на Подолі альтанка була пошкоджена разом з сонячним годинником. Альтанку
-                відновили, але вже без годинника.
-
-                У 1934 фонтан розібрали. Лише напередодні урочистостей з нагоди 1500-річчя Києва прийняли рішення
-                відновити альтанку та фонтан. «Новий» Самсон створений за зразком стародавньої копії, збереженої в
-                музеї. Відновлена і альтанка у формах українського бароко. Архітектори проекту відбудови В.Шевченко,
-                Ю.Лосицький.
-
-                За старою легендою резервуар фонтана підземними шляхами з'єднувався з водами р. Йордан, то набираючи
-                воду з Самсона, кияни вірили, що п'ють з легендарної річки, особливо на свято Хрещення Господнього —
-                Водохреще.
+                Вважають, що перший басейн для води тут спорудили ще за часів Київської Руси. Воду для нього подавали по дерев'яних трубах. В добу Відродження деякі багаті міста Західної Європи прикрасили свої площі невеликими фонтанами зі скульптурами. Мода на фонтани
+                була підтримана і польськими магнатами, що прикрасили подібними фонтанами сади при власних замках чи їх внутрішні дворики. Серед найдавніших фонтанів України — фонтани Італійського саду замку Підгірці, створені в середині 17 століття (не
+                збереглися).
+                <img id="ImgRight" src="img/Samson2.jpg" align="right" vspace="5" hspace="5"> З'явився фонтан і на Подолі в Києві. Басейн мав дах у вигляді альтанки, а в середині стояв янгол з чашею, з якої текла вода. Ще один янгол прикрасив дах альтанки
+                на кшталт флюгера. Наприкінці XVII ст. на даху альтанки встановили сонячний годинник. Його спорудив викладач Києво-Могилянської академії, француз Брульйон. У 1749 тут вперше поставили скульптурку біблійного персонажа Самсона, що роздирав
+                пащу лева. У 1811 під час пожежі на Подолі альтанка була пошкоджена разом з сонячним годинником. Альтанку відновили, але вже без годинника. У 1934 фонтан розібрали. Лише напередодні урочистостей з нагоди 1500-річчя Києва прийняли рішення
+                відновити альтанку та фонтан. «Новий» Самсон створений за зразком стародавньої копії, збереженої в музеї. Відновлена і альтанка у формах українського бароко. Архітектори проекту відбудови В.Шевченко, Ю.Лосицький. За старою легендою резервуар
+                фонтана підземними шляхами з'єднувався з водами р. Йордан, то набираючи воду з Самсона, кияни вірили, що п'ють з легендарної річки, особливо на свято Хрещення Господнього — Водохреще.
             </p>
 
 
