--- a/detail/Shevchenko_park.html
+++ b/detail/Shevchenko_park.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 
@@ -8,6 +7,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <title>Парк імені Тараса Шевченка</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
 
 <body>
     <script src="../js/preloader.js"></script>
@@ -32,18 +44,9 @@
 
             <h2>Історія</h2>
 
-            <p> Парк заснований 1860 року під назвою Університетський сквер. 1896 року у парку відкрито пам'ятник
-                Миколі
-                I, який був знесений більшовиками 1920 року.
-
-                1939 року, з нагоди 125-річчя від дня народження Тараса Шевченка, на місці колишнього пам'ятника
-                Миколі
-                І було відкрито пам'ятник Тарасові Шевченку, роботи скульптора Матвія Манізера. На 1938 рік
-                скульптором
-                із учнями була створена скульптура, про яку Лазар Каганович сказав, що «цей Шевченко буде закликати
-                до
-                повалення колгоспного ладу» і авторові довелося виконати скульптуру за ідеєю більшовицьких
-                керівників.
+            <p> Парк заснований 1860 року під назвою Університетський сквер. 1896 року у парку відкрито пам'ятник Миколі I, який був знесений більшовиками 1920 року. 1939 року, з нагоди 125-річчя від дня народження Тараса Шевченка, на місці колишнього пам'ятника
+                Миколі І було відкрито пам'ятник Тарасові Шевченку, роботи скульптора Матвія Манізера. На 1938 рік скульптором із учнями була створена скульптура, про яку Лазар Каганович сказав, що «цей Шевченко буде закликати до повалення колгоспного
+                ладу» і авторові довелося виконати скульптуру за ідеєю більшовицьких керівників.
             </p>
         </main>
         <a class="detailA" href="../index.html#Shevchenko_park"> назад</a>
