--- a/detail/Trukhanov_Island.html
+++ b/detail/Trukhanov_Island.html
@@ -8,6 +8,19 @@
     <title>Труханов остров</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -31,55 +44,20 @@
 
             <h2>География</h2>
 
-            <p>Площадь Труханова острова составляет около 450 га, он соединён с правым берегом Днепра пешеходным
-                мостом.
-                Труханов остров окружают Днепр, его рукав Черторой и Долобский пролив (Долбичка). Южную оконечность
-                острова
-                разделяют днепровские заливы Старик (ныне Матвеевский залив) и Старуха.</p>
+            <p>Площадь Труханова острова составляет около 450 га, он соединён с правым берегом Днепра пешеходным мостом. Труханов остров окружают Днепр, его рукав Черторой и Долобский пролив (Долбичка). Южную оконечность острова разделяют днепровские заливы
+                Старик (ныне Матвеевский залив) и Старуха.</p>
 
             <h2>История</h2>
 
-            <p>Считается, что название Труханова острова происходит от имени половецкого хана Тугорхана, так как в
-                конце
-                XI века
-                на нём находилась резиденция его дочери — жены киевского князя Святополка Изяславича. В древних
-                документах
-                упоминается также как Труханов, Туханов, Тухонов остров. Во времена Киевской Руси на Трухановом
-                острове
-                существовало также поселение Ольжиши, принадлежащее княгине Ольге. В 1534 году остров перешёл во
-                владение
-                Пустынно-Никольского монастыря, в 1698 году был возвращён городу.В середине XIX века на нём
-                появились
-                первые
-                постройки, когда городская управа выделила здесь около 1 га земли для строительства паровой
-                мельницы. В
-                1880-х
-                годах возникли рабочие селения в связи с созданием на острове 1-го и 2-го объединения Днепровского
-                пароходства.
-                Здесь расположились судоверфи, яхт-клуб, парк «Эрмитаж», в 1895 году появился телефон — связь
-                провели на
-                дачу
-                пароходного магната Марголина. В 1907 году городская дума разрешила заселять остров. К тому времени
-                на
-                нём
-                обитали 130 самосёлов, работавших на судоверфи. Довольно быстро на Трухановом обустроили центральную
-                базарную
-                площадь (Запорожскую), проложили улицы с географическими названиями: Днепровская, Конотопская,
-                Полтавская. В
-                1909 году за деньги Марголина выстроили школу-училище, а в 1910 году освятили каменную церковь
-                Святой
-                Елизаветы
-                — в честь Елизаветы Треповой, киевской генерал-губернаторши, помогавшей строительству.Известный ныне
-                пляж на
-                Трухановом острове был впервые открыт в 1918 году в годы первой немецкой оккупации.После разрушения
-                поселения во
-                время Великой Отечественной войны (дома были сожжены немцами 27 сентября 1943 года во время их
-                отступления)
-                Труханов остров перестроили в место отдыха.До перекрытия Днепра плотиной Киевской ГЭС Труханов
-                остров во
-                время
-                весенних половодий полностью затапливался.</p>
-                <a class="detailA" href="../index.html#Trukhanov_Island"> назад</a>
+            <p>Считается, что название Труханова острова происходит от имени половецкого хана Тугорхана, так как в конце XI века на нём находилась резиденция его дочери — жены киевского князя Святополка Изяславича. В древних документах упоминается также
+                как Труханов, Туханов, Тухонов остров. Во времена Киевской Руси на Трухановом острове существовало также поселение Ольжиши, принадлежащее княгине Ольге. В 1534 году остров перешёл во владение Пустынно-Никольского монастыря, в 1698 году
+                был возвращён городу.В середине XIX века на нём появились первые постройки, когда городская управа выделила здесь около 1 га земли для строительства паровой мельницы. В 1880-х годах возникли рабочие селения в связи с созданием на острове
+                1-го и 2-го объединения Днепровского пароходства. Здесь расположились судоверфи, яхт-клуб, парк «Эрмитаж», в 1895 году появился телефон — связь провели на дачу пароходного магната Марголина. В 1907 году городская дума разрешила заселять
+                остров. К тому времени на нём обитали 130 самосёлов, работавших на судоверфи. Довольно быстро на Трухановом обустроили центральную базарную площадь (Запорожскую), проложили улицы с географическими названиями: Днепровская, Конотопская,
+                Полтавская. В 1909 году за деньги Марголина выстроили школу-училище, а в 1910 году освятили каменную церковь Святой Елизаветы — в честь Елизаветы Треповой, киевской генерал-губернаторши, помогавшей строительству.Известный ныне пляж на
+                Трухановом острове был впервые открыт в 1918 году в годы первой немецкой оккупации.После разрушения поселения во время Великой Отечественной войны (дома были сожжены немцами 27 сентября 1943 года во время их отступления) Труханов остров
+                перестроили в место отдыха.До перекрытия Днепра плотиной Киевской ГЭС Труханов остров во время весенних половодий полностью затапливался.</p>
+            <a class="detailA" href="../index.html#Trukhanov_Island"> назад</a>
 
             <footer class="footerDetail">
 
