--- a/detail/kastel.html
+++ b/detail/kastel.html
@@ -8,6 +8,19 @@
     <title>Костел Святого Миколая</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -33,49 +46,29 @@
 
             <h3>Дореволюційний період</h3>
 
-            <p>Костел був побудований у 1899—1909 роках у неоготичному стилі українським архітектором Владиславом
-                Городецьким за проєктом С. В. Валовського. Дозвіл на спорудження храму отримав граф Владислав Міхал Пій
-                Браницький, який також надав кошти для будівництва.</p>
+            <p>Костел був побудований у 1899—1909 роках у неоготичному стилі українським архітектором Владиславом Городецьким за проєктом С. В. Валовського. Дозвіл на спорудження храму отримав граф Владислав Міхал Пій Браницький, який також надав кошти для
+                будівництва.</p>
 
             <h3>Радянський період</h3>
 
-            <p><img id="H" id="ImgRight" src="img/kastel2.jpg" align="right" vspace="5" hspace="5">У 1936 році радянська
-                влада
-                закрила костел Святого Миколая. Відтоді споруду використовували як господарське приміщення. Частину площ
-                усередині займали системи глушіння «ворожих» західних радіостанцій, а антени системи було розвішано
-                ззовні на баштах костелу.
-
-                У 1978 році за наказом Ради Міністрів УРСР будівлю костелу віддали під створення Київського будинку
-                органної та камерної музики. Для цього в Чехословаччині замовили орган компанії «Rieger-Kloss». У 1981
-                році було закінчено реставрацію, і того ж року в костелі почав діяти концертний зал.</p>
+            <p><img id="H" id="ImgRight" src="img/kastel2.jpg" align="right" vspace="5" hspace="5">У 1936 році радянська влада закрила костел Святого Миколая. Відтоді споруду використовували як господарське приміщення. Частину площ усередині займали системи
+                глушіння «ворожих» західних радіостанцій, а антени системи було розвішано ззовні на баштах костелу. У 1978 році за наказом Ради Міністрів УРСР будівлю костелу віддали під створення Київського будинку органної та камерної музики. Для цього
+                в Чехословаччині замовили орган компанії «Rieger-Kloss». У 1981 році було закінчено реставрацію, і того ж року в костелі почав діяти концертний зал.</p>
 
             <h3>Доба незалежності</h3>
 
-            <p>За часи незалежності України костел Святого Миколая поділили поміж собою Національний будинок органної та
-                камерної музики України, як приміщення для концертів, та парафія Святого Миколая Римсько-католицької
-                церкви в Україні, яка проводить у ньому богослужіння для релігійної громади. Влада відмовлялася передати
-                приміщення Римсько-католицькій церкві повністю до розв'язання питання щодо нового місця розташування
-                Органного залу.
-
-                Приміщення перебувало в аварійному стані. Міністерство культури України спланувало до кінця 2023 року
-                реалізувати проєкт будівництва в Києві Будинку музики та перемістити до нього Національний будинок
-                органної та камерної музики України.
-
-                Також у храмі почали службу священники зі Згромадження Місіонерів Облатів Непорочної Марії.
+            <p>За часи незалежності України костел Святого Миколая поділили поміж собою Національний будинок органної та камерної музики України, як приміщення для концертів, та парафія Святого Миколая Римсько-католицької церкви в Україні, яка проводить
+                у ньому богослужіння для релігійної громади. Влада відмовлялася передати приміщення Римсько-католицькій церкві повністю до розв'язання питання щодо нового місця розташування Органного залу. Приміщення перебувало в аварійному стані. Міністерство
+                культури України спланувало до кінця 2023 року реалізувати проєкт будівництва в Києві Будинку музики та перемістити до нього Національний будинок органної та камерної музики України. Також у храмі почали службу священники зі Згромадження
+                Місіонерів Облатів Непорочної Марії.
             </p>
 
             <h3>Пожежа 2021 року</h3>
 
-            <p>Ввечері 3 вересня 2021 року в костелі виникла пожежа, площа якої сягнула 80 м². На місці події працювали
-                80 рятувальників та 16 одиниць техніки, які ліквідували пожежу за півтори години. Унаслідок пожежі, яка
-                поширилася на два поверхи костелу та дах, покрівля будівлі була дуже пошкоджена, та цілком згорів
-                унікальний орган, виготовлений з металу і дорогих порід чорного та червоного дерева. Основною версією
-                виникнення пожежі є загоряння електропроводів всередині дерев'яного корпусу органу, яким було понад 40
-                років. Постраждалих серед людей не було.
-
-                За добу після пожежі українські компанії пожертвували 18 млн гривень на відновлення костелу. За
-                попередньою оцінкою Міністерства культури та інформаційної політики, відновлення костелу мало коштувати
-                75 млн грн, іншу частину грошей мала надати держава.</p>
+            <p>Ввечері 3 вересня 2021 року в костелі виникла пожежа, площа якої сягнула 80 м². На місці події працювали 80 рятувальників та 16 одиниць техніки, які ліквідували пожежу за півтори години. Унаслідок пожежі, яка поширилася на два поверхи костелу
+                та дах, покрівля будівлі була дуже пошкоджена, та цілком згорів унікальний орган, виготовлений з металу і дорогих порід чорного та червоного дерева. Основною версією виникнення пожежі є загоряння електропроводів всередині дерев'яного корпусу
+                органу, яким було понад 40 років. Постраждалих серед людей не було. За добу після пожежі українські компанії пожертвували 18 млн гривень на відновлення костелу. За попередньою оцінкою Міністерства культури та інформаційної політики, відновлення
+                костелу мало коштувати 75 млн грн, іншу частину грошей мала надати держава.</p>
         </main>
         <a class="detailA" onclick="history.back();"> назад</a>
 
