--- a/detail/myzey_aviazei.html
+++ b/detail/myzey_aviazei.html
@@ -8,6 +8,19 @@
     <title>Державний музей авіації України</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -31,19 +44,13 @@
 
             <h2>Історія</h2>
 
-            <p>Урочисте відкриття відбулося 30 вересня 2003 року напередодні святкування 100-річчя світової авіації та
-                80-річчя авіації України. Музей розміщується на території колишньої навчально-авіаційної бази Київського
-                інституту інженерів цивільної авіації (КІІЦА) (нині Національний авіаційний університет (НАУ)).</p>
+            <p>Урочисте відкриття відбулося 30 вересня 2003 року напередодні святкування 100-річчя світової авіації та 80-річчя авіації України. Музей розміщується на території колишньої навчально-авіаційної бази Київського інституту інженерів цивільної
+                авіації (КІІЦА) (нині Національний авіаційний університет (НАУ)).</p>
 
             <h2>Експонатне наповнення</h2>
 
-            <p>За кількістю дослідних і одиничних бортів музей є шостим у світі і другим за величиною колекції в
-                пострадянських країнах – більше лише в російському Моніно. У Музеї можна побачити перший дослідний
-                Іл-86, другий дослідний/перший серійний Іл-18, перший серійний Ту-104, передсерійний Ту-134, а також
-                Ту-22М0 з дослідної серії та інші.
-
-                На території площею 20 гектарів зібрано понад 70 експонатів: пасажирських та навчально-тренувальних
-                літаків, винищувачів, ракетоносців, вертольотів.</p>
+            <p>За кількістю дослідних і одиничних бортів музей є шостим у світі і другим за величиною колекції в пострадянських країнах – більше лише в російському Моніно. У Музеї можна побачити перший дослідний Іл-86, другий дослідний/перший серійний Іл-18,
+                перший серійний Ту-104, передсерійний Ту-134, а також Ту-22М0 з дослідної серії та інші. На території площею 20 гектарів зібрано понад 70 експонатів: пасажирських та навчально-тренувальних літаків, винищувачів, ракетоносців, вертольотів.</p>
         </main>
         <a class="detailA" href="../index.html#myzey_ykrain"> назад</a>
 
