--- a/detail/rodina_mati.html
+++ b/detail/rodina_mati.html
@@ -8,6 +8,19 @@
     <title>Батьківщина мати</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../js/preloader.js"></script>
 
@@ -31,71 +44,30 @@
 
             <h2>Назва</h2>
 
-            <p>Спочатку монумент замислювався як символ не Батьківщини, а Перемоги, проте назва «Батьківщина-Мати»
-                увійшла до ужитку майже одразу ж після зведення</p>
+            <p>Спочатку монумент замислювався як символ не Батьківщини, а Перемоги, проте назва «Батьківщина-Мати» увійшла до ужитку майже одразу ж після зведення</p>
 
             <h2>Проєктування</h2>
 
-            <p>Перший проєкт «Батьківщини-Матері» розробив ще у 1970-х роках скульптор Євгеній Вучетич, але спорудження
-                почалося набагато пізніше. У 1974 році, після смерті Євгенія Вучетича, проєкт взяв на себе український
-                скульптор Василь Бородай, який здійснив деякі зміни в проєкті скульптури і почав її будівництво.
-
-                Спочатку передбачалося, що на постаменті підноситиметься 90-метрова бронзова з позолотою фігура жінки.
-                Біля підніжжя статуї з 30-метрової висоти повинен був текти до Дніпра водоспад, з обох боків якого воїни
-                форсували річку.
-
-                Статуя ліплена з образу борзнянки, скульпторки Галини Кальченко.</p>
+            <p>Перший проєкт «Батьківщини-Матері» розробив ще у 1970-х роках скульптор Євгеній Вучетич, але спорудження почалося набагато пізніше. У 1974 році, після смерті Євгенія Вучетича, проєкт взяв на себе український скульптор Василь Бородай, який
+                здійснив деякі зміни в проєкті скульптури і почав її будівництво. Спочатку передбачалося, що на постаменті підноситиметься 90-метрова бронзова з позолотою фігура жінки. Біля підніжжя статуї з 30-метрової висоти повинен був текти до Дніпра
+                водоспад, з обох боків якого воїни форсували річку. Статуя ліплена з образу борзнянки, скульпторки Галини Кальченко.</p>
 
             <h2>Будівництво</h2>
 
-            <p>Металевий каркас виготовлений зі сталі, яка була виплавлена у Запоріжжі.
-
-                Скульптуру збирали стометровим краном, який був виготовлений спеціально для цього. Пізніше цей кран
-                демонтували.
-
-                З неіржавної сталі окремими блоками-секціями вагою 25-30 тонн скульптура була зварена на Київському
-                заводі імені Паризької Комуни з урахуванням рекомендацій Інституту електрозварювання імені Є. О. Патона.
-                Частини скульптури перевозили вночі, щоб не привертати увагу людей.
-
-                Зварювальникам монумента «Батьківщина-Мати» платили 50 радянських карбованців на день (велика на той час
-                сума), але оплата відповідала роботі, оскільки зварники обпікали собі очі від такої кількості невпинної
-                роботи. Інженери ж отримували звичайну зарплатню, але були задоволені й тим, що будували одне з «чудес»
-                Києва.
-
-                За час монтажу на скульптуру було накладено 30 км зварних швів.
-
-                Судячи з геодезичних інструментальних замірів, що проводяться щорічно монумент «Батьківщина-Мати»
-                повинен простояти понад 150 років. За розрахунками, статуя може витримати навіть землетрус за шкалою до
-                9 балів.
-
-                Щоб перевірити стійкість скульптури, 10-метрову копію випробовували на міцність у Москві в найбільшій у
-                СРСР турбіні.
-
-                Через близькість Великої дзвіниці Києво-Печерської лаври (висота 96,5 м), висоту монумента зменшили до
-                102 м (початкова висота мала складати 108 м), але через те що Велика дзвіниця розташована на пагорбі,
-                над рівнем моря «Батьківщини-Мати» на 12 метрів нижча Великої лаврської дзвіниці.
-
-                Відкриття монумента планувалось 9 травня 1980 року, але відбулося лише через рік по тому.
-
-                Вартість споруди — 2 млн радянських карбованців.</p>
+            <p>Металевий каркас виготовлений зі сталі, яка була виплавлена у Запоріжжі. Скульптуру збирали стометровим краном, який був виготовлений спеціально для цього. Пізніше цей кран демонтували. З неіржавної сталі окремими блоками-секціями вагою 25-30
+                тонн скульптура була зварена на Київському заводі імені Паризької Комуни з урахуванням рекомендацій Інституту електрозварювання імені Є. О. Патона. Частини скульптури перевозили вночі, щоб не привертати увагу людей. Зварювальникам монумента
+                «Батьківщина-Мати» платили 50 радянських карбованців на день (велика на той час сума), але оплата відповідала роботі, оскільки зварники обпікали собі очі від такої кількості невпинної роботи. Інженери ж отримували звичайну зарплатню, але
+                були задоволені й тим, що будували одне з «чудес» Києва. За час монтажу на скульптуру було накладено 30 км зварних швів. Судячи з геодезичних інструментальних замірів, що проводяться щорічно монумент «Батьківщина-Мати» повинен простояти
+                понад 150 років. За розрахунками, статуя може витримати навіть землетрус за шкалою до 9 балів. Щоб перевірити стійкість скульптури, 10-метрову копію випробовували на міцність у Москві в найбільшій у СРСР турбіні. Через близькість Великої
+                дзвіниці Києво-Печерської лаври (висота 96,5 м), висоту монумента зменшили до 102 м (початкова висота мала складати 108 м), але через те що Велика дзвіниця розташована на пагорбі, над рівнем моря «Батьківщини-Мати» на 12 метрів нижча Великої
+                лаврської дзвіниці. Відкриття монумента планувалось 9 травня 1980 року, але відбулося лише через рік по тому. Вартість споруди — 2 млн радянських карбованців.</p>
 
             <h2>Експлуатація</h2>
 
-            <p>9 травня 1981 року відбулося гучне відкриття монументу, сам Леонід Брежнєв приїхав на відкриття
-                стометрового монументу «Батьківщина-Мати», яка стала новим символом Києва.
-
-                У 1987 році над Києвом пронісся сильний ураган, але статуя залишилася неушкодженою.
-
-                Влітку 2002 року був дозволений підйом екскурсантів на майданчики відмітки 36 метрів і 92 метри. Проте
-                після того, як у квітні 2003 року молодий чоловік впав з верхнього майданчика і розбився, доступ
-                туристів був обмежений.
-
-                У 2009 році була почата реставрація споруди.
-
-                Планується декомунізувати радянський герб на пам'ятнику чи то зрізанням, чи то накладанням. Герб СРСР на
-                «Батьківщині-Мати» на тризуб передбачається змінити не раніше 2023 року. За словами міністра культури
-                України Олександр Ткаченко паралельно мають бути вирішені питання із законодавчою сферою, а також
-                потрібно вирішити питання авторського нагляду.</p>
+            <p>9 травня 1981 року відбулося гучне відкриття монументу, сам Леонід Брежнєв приїхав на відкриття стометрового монументу «Батьківщина-Мати», яка стала новим символом Києва. У 1987 році над Києвом пронісся сильний ураган, але статуя залишилася
+                неушкодженою. Влітку 2002 року був дозволений підйом екскурсантів на майданчики відмітки 36 метрів і 92 метри. Проте після того, як у квітні 2003 року молодий чоловік впав з верхнього майданчика і розбився, доступ туристів був обмежений.
+                У 2009 році була почата реставрація споруди. Планується декомунізувати радянський герб на пам'ятнику чи то зрізанням, чи то накладанням. Герб СРСР на «Батьківщині-Мати» на тризуб передбачається змінити не раніше 2023 року. За словами міністра
+                культури України Олександр Ткаченко паралельно мають бути вирішені питання із законодавчою сферою, а також потрібно вирішити питання авторського нагляду.</p>
 
 
             <a class="detailA" href="../index.html#rodina_mati"> назад</a>
