--- a/istorichniFoto/detailIFP/Golden_GateIFP.html
+++ b/istorichniFoto/detailIFP/Golden_GateIFP.html
@@ -11,6 +11,19 @@
     <title> Золоті ворота </title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWPG8TK4CL');
+</script>
+
 <body>
     <script src="../../js/preloader.js"></script>
 
